Add lower bounds

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,12 +17,12 @@ build:
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
   run:
     - netifaces
     - psutil
-    - python
+    - python >=3.6
     - zeroconf
 
 test:
