--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,5 @@
 {% set name = "spyder-remote-client" %}
 {% set version = "0.0.25" %}
-{% set hash = "f778b39d193e2b185cb5e4922ecc3ec2b60f970cde219bb32796b552f515eb6e" %}
 
 package:
   name: {{ name|lower }}
@@ -8,16 +7,17 @@ package:
 
 source:
   url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ hash }}
+  sha256: f778b39d193e2b185cb5e4922ecc3ec2b60f970cde219bb32796b552f515eb6e
 
 build:
   noarch: python
   number: 1
-  script: {{ PYTHON }} -m pip install . -vv
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
   host:
     - python {{ python_min }}
+    - setuptools
     - pip
   run:
     - netifaces
